--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,8 @@
 title: Jungwoo Pyo
 email: jwpyo@kdb.snu.ac.kr
 description: > # this means to ignore newlines until "baseurl:"
-  Master's course
-  Petabyte Scale Memory Database Lab
-  Seoul National University
+  M.S. at Petabyte Scale Memory Database Lab, Dept. of Electrical & Computer Engineering of Seoul National University
+  B.S. at Dept. of Electrical & Computer Engineering of Seoul National University
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
